--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,20 @@ services:
     ports:
       - 5000:5000
     links:
-      - redis
+      - rabbitmq
       - gateway
       - celery
     command: gunicorn -w 4 -b :5000 api:app
   celery:
     build: ./web_service
     links:
-      - redis
+      - rabbitmq
       - gateway
     command: su -m celery -c "celery worker -l info -A api.celery"
-  redis:
-    image: 'redis:3.0-alpine'
+  rabbitmq:
+    image: 'rabbitmq:3.6.6-alpine'
     ports:
-      - 6379:6379
+      - 5672:5672
   gateway:
     image: couchbase/sync-gateway
     ports:
